<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="headquarters"
            type="com.leskov.airport.domain.entity.HeadQuarterEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.list_of_items.headquarters.update.UpdateListOfHeadquartersFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/headquarters"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_of_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent"
            app:counterEnabled="true"
            android:hint="@string/number_of_headquarters"
            app:counterMaxLength="100"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_of"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:text="@{String.valueOf(headquarters.numberOf)}"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/office_location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:errorEnabled="true"
            android:hint="@string/number_of_beds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_of_layout"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/office_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:text="@{String.valueOf(headquarters.availabilityOfKitchen)}"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/type_of_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:errorEnabled="true"
            android:hint="@string/count_of_floors"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/office_location_layout"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/type_of"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:text="@{String.valueOf(headquarters.countOfLevels)}"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/availability_of_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/availability_of_kitchen"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/type_of_layout"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/cb_availability_of_kitchen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/availability_of_kitchen"
            app:layout_constraintTop_toBottomOf="@id/availability_of_services"
            app:layout_constraintStart_toStartOf="parent"/>
        <CheckBox
            android:id="@+id/cb_entertainment_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/entertainment_room"
            app:layout_constraintTop_toBottomOf="@id/availability_of_services"
            app:layout_constraintEnd_toEndOf="parent"/>

        <include
            android:id="@+id/btn_confirm"
            layout="@layout/card_view_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>